# routes/groupApi/VinculoApi.php
@@ -7,7 +7,7 @@ Route::group([
     'prefix' => 'auth/vinculo'
 ], function ($router) {
     Route::post('/store', [VinculoController::class, 'store']);
-    Route::post('/update/{id}', [VinculoController::class, 'update']);
+    Route::put('/update/{id}', [VinculoController::class, 'update']);
     Route::delete('/delete/{id}', [VinculoController::class, 'delete']); 
     Route::get('/show', [VinculoController::class, 'show'])->name('api.client.show'); 
 });
